--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@material-ui/icons": "^1.1.0",
     "classnames": "^2.2.6",
     "graphql-request": "^1.5.1",
-    "mobx": "^4.1.1",
-    "mobx-react": "^5.0.0",
+    "mobx": "^4.0.0 || ^5.0.0",
+    "mobx-react": "^5.2.3",
     "prop-types": "^15.6.2",
-    "react": "^16.3.1",
+    "react": "^0.13.0 || ^0.14.0 || ^15.0.0 || ^16.0.0",
     "react-dom": "^16.3.1",
     "styled-components": "^3.2.5"
   },
